cm4all-beng-proxy (0.6.15) unstable; urgency=low

  * http-cache-choice: find more duplicates during cleanup
  * handler: added AJP handler
  * ajp-request: unref pool only on tcp_stock failure
  * ajp-client: prevent parser recursion
  * ajp-client: free request body when response is closed
  * ajp-client: reuse connection after END_RESPONSE packet

 --

cm4all-beng-proxy (0.6.14) unstable; urgency=low

  * istream-tee: don't restart reading if already in progress

 -- Max Kellermann <mk@cm4all.com>  Thu, 03 Sep 2009 13:21:06 +0200

cm4all-beng-proxy (0.6.13) unstable; urgency=low

  * cookie-server: fix parsing multiple cookies
  * http-cache-memcached: clean up expired "choice" items
  * sink-gstring: use callback instead of public struct
  * istream-tee: restart reading when one output is closed

 -- Max Kellermann <mk@cm4all.com>  Wed, 02 Sep 2009 17:02:53 +0200

cm4all-beng-proxy (0.6.12) unstable; urgency=low

  * http-cache: don't attempt to remove cache items when the cache is disabled

 -- Max Kellermann <mk@cm4all.com>  Fri, 28 Aug 2009 15:40:48 +0200

cm4all-beng-proxy (0.6.11) unstable; urgency=low

  * http-cache-memcached: store HTTP status and response headers
  * http-cache-memcached: implemented flush (SIGHUP)
  * http-cache-memcached: support "Vary"
  * http-client: work around assertion failure in response_stream_close()

 -- Max Kellermann <mk@cm4all.com>  Thu, 27 Aug 2009 12:33:17 +0200

cm4all-beng-proxy (0.6.10) unstable; urgency=low

  * parser: finish tag before bailing out
  * http-request: allow URLs without path component
  * fork: clear event in read() method
  * istream-file: pass options O_CLOEXEC|O_NOCTTY to open()
  * response: check if the "Host" request header is valid

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Aug 2009 16:37:19 +0200

cm4all-beng-proxy (0.6.9) unstable; urgency=low

  * direct: disable SPLICE_F_NONBLOCK (temporary NFS EAGAIN workaround)

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Aug 2009 13:52:49 +0200
