@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.6.15) unstable; urgency=low
   * ajp-client: prevent parser recursion
   * ajp-client: free request body when response is closed
   * ajp-client: reuse connection after END_RESPONSE packet
+  * ajp-client: enable TCP_CORK while sending
 
  --
 
